# ml_server

./: .gitignore  README.md  WORKSPACE  ml_server.sublime-project
go/buildenv/: Dockerfile
go/src/: BUILD.bazel
go/src/ml_server/: BUILD.bazel
go/src/ml_server/backend/: BUILD.bazel  backend.go  deployment.yaml  service.yaml
go/src/ml_server/frontend/: BUILD.bazel  deployment.yaml  frontend.go  service.yaml
proto/: BUILD.bazel  learner.proto
