load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@io_bazel_rules_go//proto:compiler.bzl", "go_proto_compiler")


WELL_KNOWN_PROTOS = [
    "any",
    "duration",
    "empty",
    "struct",
    "timestamp",
    "wrappers",
]

GOLANG_PTYPES = [
    "@com_github_golang_protobuf//ptypes/{}:go_default_library".format(lib)
    for lib in WELL_KNOWN_PROTOS
]

go_proto_compiler(
    name = "go_proto",
    visibility = ["//visibility:public"],
    deps = [
    	"//go/src/ml_server/vendor/github.com/golang/protobuf/proto:go_default_library",
    ] + GOLANG_PTYPES,
)

go_proto_compiler(
    name = "go_grpc",
    options = ["plugins=grpc"],
    visibility = ["//visibility:public"],
    deps = [
    	"//go/src/ml_server/vendor/github.com/golang/protobuf/proto:go_default_library",
        "//go/src/ml_server/vendor/google.golang.org/grpc:go_default_library",
        "//go/src/ml_server/vendor/golang.org/x/net/context:go_default_library",
    ] + GOLANG_PTYPES,
)

go_proto_library(
    name = "learner_go_proto",
    compilers = [":go_grpc"],
    importpath = "ml_server/proto/learner",
    proto = "//proto:learner_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "learner_go_lib",
    embed = [":learner_go_proto"],
    importpath = "ml_server/proto/learner",
    visibility = ["//visibility:public"],
)