load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")

k8s_objects(
    name = "server",
    objects = [
        "//go/src/ml_server/frontend:deployment",
        "//go/src/ml_server/frontend:service",
        "//go/src/ml_server/backend:deployment",
        "//go/src/ml_server/backend:service",
    ],
    visibility = ["//visibility:public"],
)