load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_binary(
    name = "frontend",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = ["frontend.go"],
    importpath = "github.com/example/project/go/src/ml_server/frontend",
    visibility = ["//visibility:private"],
    deps = [
        "//go/src:learner_go_lib",
        "//go/src/ml_server/vendor/golang.org/x/net/context:go_default_library",
        "//go/src/ml_server/vendor/google.golang.org/grpc:go_default_library",
    ],
)

go_image(
    name = "frontend_image",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)