load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
package(default_visibility = ["//visibility:public"])

go_binary(
    name = "frontend",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = ["frontend.go"],
    importpath = "github.com/example/project/go/src/ml_server/frontend",
    visibility = ["//visibility:private"],
    deps = [
        "//go/src:learner_go_lib",
        "//go/src/ml_server/vendor/golang.org/x/net/context:go_default_library",
        "//go/src/ml_server/vendor/google.golang.org/grpc:go_default_library",
    ],
)

go_image(
    name = "frontend_image",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

load("@k8s_deploy//:defaults.bzl", "k8s_deploy")

k8s_deploy(
    name = "service",
    template = "service.yaml",
    visibility = ["//visibility:public"],
)

k8s_deploy(
    name = "deployment",
    images = {
        "index.docker.io/jdelfino/frontend:latest": ":frontend_image",
    },
    template = "deployment.yaml",
    visibility = ["//visibility:public"],
)